objects/Email_Alert_log__c.object
<CustomObject>
    <description>This object will store the record of Email Alerts when they are sent ( first need to set, an additional email alert will be sent to an email service with required detail and class associated with the service will parse the detail create record of this object. )</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Alert logs</relationshipLabel>
        <relationshipName>Email_Alert_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <label>Email Alert log</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Email Track</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Alert logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>